tests/fail/Division.java
package fail;

public class Division {
  // only intS are supported in j--
  public static void main(String[] args) {
    System.out.println('a' / 42);
  }
}